--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "scripts": {
     "lint": "eslint --fix ./"
   },
-  "dependencies": {},
+  "dependencies": {
+    "d3": "^5.7.0",
+    "dagre": "^0.8.2",
+    "dagre-d3": "^0.6.1"
+  },
   "devDependencies": {
     "eslint": "^5.8.0",
     "eslint-config-prettier": "^3.1.0",
