--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atom-hets-integration",
-  "main": "./lib/atom-hets-integration",
+  "main": "./index.js",
   "version": "0.0.0",
   "description": "An Atom extension providing support for working with Hets.",
   "keywords": [
@@ -23,7 +23,8 @@
   "dependencies": {
     "d3": "^5.7.0",
     "dagre": "^0.8.2",
-    "dagre-d3": "^0.6.1"
+    "dagre-d3": "^0.6.1",
+    "etch": "^0.14.0"
   },
   "devDependencies": {
     "eslint": "^5.8.0",
